Fixed h2 alignment to match other edit components--removed centering

--- a/member-add/src/app/components/edit-basic-info/edit-basic-info.component.css
+++ b/member-add/src/app/components/edit-basic-info/edit-basic-info.component.css
@@ -10,7 +10,6 @@
 .form-container h2 {
 	color: #333;
 	margin-bottom: 1.5rem;
-	text-align: center;
 }
 .form-row {
 	display: grid;
